--- a/index.html
+++ b/index.html
@@ -1,114 +1,128 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Resources - Pranav Haridas</title>
-
+    <title>Pranav Haridas - Resources</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <style>
-        /* Apply Inter font globally */
         body {
             font-family: 'Inter', sans-serif;
-            padding-top: 70px; /* Adjust based on your nav height */
         }
-
-        /* Style for active navigation link (if applicable) */
-        .top-nav a.active {
-            color: #0369a1;
-            font-weight: 600;
-            background-color: #e0f2fe;
-        }
-
-        /* Offset for fixed header when jumping to section ID */
-        section[id] {
-            scroll-margin-top: 80px; /* Adjust based on nav height */
-        }
-
-        /* Custom bullet points for styled lists */
-        .styled-list li::before {
-            content: '•';
-            color: #0ea5e9;
-            font-weight: bold;
-            display: inline-block;
-            width: 1em;
-            margin-left: -1.25em;
-            position: absolute;
-            left: 0.75rem;
-            top: 0.1em;
-        }
-
-        /* Style for links */
-        a {
-            color: #0ea5e9; /* text-sky-500 */
-            text-decoration: underline;
-        }
-
-        a:hover {
-            color: #1d4ed8; /* text-sky-700 */
-            text-decoration: underline;
-        }
-
     </style>
 </head>
-<body class="bg-slate-100 text-slate-800 antialiased">
+<body class="bg-gray-100">
+    <div data-include="header.html"></div>
 
-    <nav id="main-nav" class="top-nav fixed w-full top-0 left-0 bg-white/90 backdrop-blur-md z-50 shadow-sm border-b border-slate-200">
-        <ul class="flex justify-center flex-wrap gap-x-4 sm:gap-x-6 py-3 px-4 max-w-5xl mx-auto">
-            <li><a href="#contact" class="text-slate-600 hover:text-sky-600 font-medium px-3 py-2 rounded-md transition-colors duration-200 ease-in-out">Contact</a></li>
-            <li><a href="#research" class="text-slate-600 hover:text-sky-600 font-medium px-3 py-2 rounded-md transition-colors duration-200 ease-in-out">Research</a></li>
-            <li><a href="#teaching" class="text-slate-600 hover:text-sky-600 font-medium px-3 py-2 rounded-md transition-colors duration-200 ease-in-out">Teaching</a></li>
-            <li><a href="#education" class="text-slate-600 hover:text-sky-600 font-medium px-3 py-2 rounded-md transition-colors duration-200 ease-in-out">Education</a></li>
-            <li><a href="#experience" class="text-slate-600 hover:text-sky-600 font-medium px-3 py-2 rounded-md transition-colors duration-200 ease-in-out">Experience</a></li>
-            <li><a href="#resources" class="text-slate-600 hover:text-sky-600 font-medium px-3 py-2 rounded-md transition-colors duration-200 ease-in-out">Resources</a></li>
-        </ul>
-    </nav>
-
-    <div class="main-container max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 py-8 sm:py-12">
-        <header class="mb-10 sm:mb-16 text-center">
-            <h1 class="text-3xl sm:text-4xl font-bold text-sky-800 mb-2">Online Resources</h1>
-        </header>
-
-        <section id="resources" class="bg-white rounded-xl shadow-lg overflow-hidden p-6 sm:p-8 space-y-6">
+    <main class="container mx-auto py-10 px-4">
+        <section id="resources" class="bg-white rounded-lg shadow-md p-6 space-y-6">
+            
+            <h2 class="text-2xl font-semibold text-gray-800 mb-4">Resources</h2>
             <p class="text-lg text-slate-600 leading-relaxed">
-                I have compiled below a few of my favourite video lectures found on the web.
+                I have compiled below a few of my favourite online resources, especially video lectures found on the web.
             </p>
 
             <div class="space-y-4">
                 <h3 class="text-xl font-semibold text-sky-600">Lectures on Combinatorics</h3>
                 <p class="text-slate-700 leading-relaxed">
-                    Prof. Timothy Gowers offered a course on Combinatorics in the Part III Mathematics course at Cambridge in the Michaelmas term of 2020. The videos can be found <a href="https://www.youtube.com/playlist?list=PLOft35kj95aYT2SgFbYwEOavJ7gagmCVZ">here</a>. The lecture notes for this course can be found <a href="https://drive.google.com/file/d/1V778zHQTx4XE8FxDgznt2jTshZzxAFot/view">here</a>.
+                    Prof. Timothy Gowers offered a course on Combinatorics in the Part III Mathematics course at Cambridge in the Michaelmas term of 2020. The videos can be found <a href="https://www.youtube.com/playlist?list=PLOft35kj95aYT2SgFbYwEOavJ7gagmCVZ" target="_blank" class="text-sky-600 hover:text-sky-800 hover:underline decoration-sky-300 underline-offset-2 transition duration-150 ease-in-out">here</a>. The lecture notes for this course can be found <a href="https://drive.google.com/file/d/1V778zHQTx4XE8FxDgznt2jTshZzxAFot/view" target="_blank" class="text-sky-600 hover:text-sky-800 hover:underline decoration-sky-300 underline-offset-2 transition duration-150 ease-in-out">here</a>.
                 </p>
             </div>
 
             <div class="space-y-4">
                 <h3 class="text-xl font-semibold text-sky-600">Lectures on Algebraic Topology</h3>
                 <p class="text-slate-700 leading-relaxed">
-                    <a href="https://www.youtube.com/playlist?list=PL_bVGic_CrGs5bOLW_RR-8Y2RM09Fyg_0">Here</a> is a set of lectures on Algebraic Topology by Prof. Siddhartha Gadgil offered at the Indian Institute of Science, Bangalore in Fall 2020.
+                    <a href="https://www.youtube.com/playlist?list=PL_bVGic_CrGs5bOLW_RR-8Y2RM09Fyg_0" target="_blank" class="text-sky-600 hover:text-sky-800 hover:underline decoration-sky-300 underline-offset-2 transition duration-150 ease-in-out">Here</a> is a set of lectures on Algebraic Topology by Prof. Siddhartha Gadgil offered at the Indian Institute of Science, Bangalore in Fall 2020.
                 </p>
                 <p class="text-slate-700 leading-relaxed">
-                    Dr. Pierre Albin from the University of Illinois at Urbana-Champaign offered a course on Algebraic Topology. The course more or less follows the route taken by Allen Hatcher in his book "Algebraic Topology". The lectures can be found <a href="https://www.youtube.com/watch?v=XxFGokyYo6g&list=PLpRLWqLFLVTCL15U6N3o35g4uhMSBVA2b">here</a>.
+                    Dr. Pierre Albin from the University of Illinois at Urbana-Champaign offered a course on Algebraic Topology. The course more or less follows the route taken by Allen Hatcher in his book "Algebraic Topology". The lectures can be found <a href="https://www.youtube.com/watch?v=XxFGokyYo6g&list=PLpRLWqLFLVTCL15U6N3o35g4uhMSBVA2b" target="_blank" class="text-sky-600 hover:text-sky-800 hover:underline decoration-sky-300 underline-offset-2 transition duration-150 ease-in-out">here</a>.
                 </p>
             </div>
 
             <div class="space-y-4">
                 <h3 class="text-xl font-semibold text-sky-600">Lectures on the Geometric Anatomy of Theoretical Physics</h3>
                 <p class="text-slate-700 leading-relaxed">
-                    Dr. Frederic P Schuller delivered a series of lectures titled "Lectures on the Geometric Anatomy of Theoretical Physics". The lecture series involves building the foundational mathematics needed for theoretical physics (which includes Classical Mechanics, Electromagnetism, Quantum Mechanics, Statistical Physics, Relativity). These lectures start from Logic and pave its way into Bundle Theory eventually. These lectures will be an excellent source to learn the material generally involved in a Topology and Geometry course in Mathematics. A link to the playlist for this course is given <a href="https://www.youtube.com/playlist?list=PLPH7f_7ZlzxTi6kS4vCmv4ZKm9u8g5yic">here</a>.
+                    Dr. Frederic P Schuller delivered a series of lectures titled "Lectures on the Geometric Anatomy of Theoretical Physics". The lecture series involves building the foundational mathematics needed for theoretical physics (which includes Classical Mechanics, Electromagnetism, Quantum Mechanics, Statistical Physics, Relativity). These lectures start from Logic and pave its way into Bundle Theory eventually. These lectures will be an excellent source to learn the material generally involved in a Topology and Geometry course in Mathematics. A link to the playlist for this course is given <a href="https://www.youtube.com/playlist?list=PLPH7f_7ZlzxTi6kS4vCmv4ZKm9u8g5yic" target="_blank" class="text-sky-600 hover:text-sky-800 hover:underline decoration-sky-300 underline-offset-2 transition duration-150 ease-in-out">here</a>.
                 </p>
             </div>
         </section>
-    </div>
+    </main>
 
-    <footer class="text-center py-6 mt-12 border-t border-slate-200">
-        <p class="text-sm text-slate-500">© <span id="current-year"></span> Pranav Haridas. All rights reserved.</p>
-    </footer>
+    <div data-include="footer.html"></div>
 
     <script>
-        // --- Set Current Year in Footer ---
-        document.getElementById('current-year').textContent = new Date().getFullYear();
+    // Simple script to include HTML content.  For production, you'd use a server-side include or a more robust client-side solution.
+    document.addEventListener('DOMContentLoaded', () => {
+        const includeElements = document.querySelectorAll('[data-include]');
+        includeElements.forEach(element => {
+            const url = element.getAttribute('data-include');
+            fetch(url)
+                .then(response => response.text())
+                .then(html => {
+                    element.outerHTML = html; // Replace the element with the fetched content.
+                    // --- Navigation Active State Scrollspy ---
+                    const sections = document.querySelectorAll('section[id]');
+                    const navLinks = document.querySelectorAll('.top-nav a');
+                    const navHeight = document.getElementById('main-nav')?.offsetHeight || 70;
+
+                    const activateNavLink = (id) => {
+                        navLinks.forEach(link => {
+                            link.classList.remove('active');
+                            if (link.getAttribute('href') === `#${id}`) {
+                                link.classList.add('active');
+                            }
+                        });
+                    };
+
+                    const onScroll = () => {
+                        let currentSectionId = '';
+                        const scrollPosition = window.pageYOffset;
+
+                        sections.forEach(section => {
+                            const sectionTop = section.offsetTop;
+                            const activationOffset = navHeight * 1.5;
+
+                            if (scrollPosition >= sectionTop - activationOffset) {
+                                currentSectionId = section.getAttribute('id');
+                            }
+                        });
+
+                        const lastSection = sections[sections.length - 1];
+                        if (scrollPosition + window.innerHeight >= document.documentElement.scrollHeight - 50) {
+                            currentSectionId = lastSection.getAttribute('id');
+                        }
+
+                        if (scrollPosition < sections[0].offsetTop - navHeight * 2) {
+                            currentSectionId = sections[0].getAttribute('id');
+                        }
+
+
+                        if (currentSectionId) {
+                            activateNavLink(currentSectionId);
+                        } else if (navLinks.length > 0) {
+                            activateNavLink(sections[0].getAttribute('id'));
+                        }
+                    };
+
+                    window.addEventListener('scroll', onScroll);
+                    window.addEventListener('load', onScroll);
+
+
+                    // --- Set Current Year ---
+                    const yearSpan = document.getElementById('current-year');
+                    if(yearSpan){
+                        yearSpan.textContent = new Date().getFullYear();
+                    }
+
+                })
+                .catch(error => {
+                    console.error('Error fetching include:', error);
+                    element.outerHTML = `<div class="text-red-500">Failed to load include: ${url}</div>`;
+                });
+        });
+    });
     </script>
 </body>
 </html>
