--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <title>Pranav Haridas - Resources</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-    <link 
-      rel="stylesheet" 
-      href="https://raw.githubusercontent.com/pranavharidas/common-files/branch/path/to/style.css"
-    >
+    <link rel="stylesheet" href="style.css">
     <style>
         body {
             font-family: 'Inter', sans-serif;
